# CoinMaster

./: Dockerfile  README.md  alert.py  get_current_coin_price.py  get_history_coin_price_image.py  keep_alive.py  main.py  price_predict.py  pyproject.toml  replit_zip_error_log.txt  requirements.txt
.cache/replit/nix/: env.json
.github/workflows/: ci.yaml
.upm/: store.json
finlab/: crypto.py
finlab/history/crypto/: BTCUSDT-4h-data.csv  ETHUSDT-4h-data.csv
history/crypto/: BTCUSDT-1d-data.csv  DOGEUSDT-1d-data.csv  ETHUSDT-1d-data.csv  LUNAUSDT-1d-data.csv
