[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = "^1.7.3"
selenium = "^4.2.0"
bs4 = "^0.0.1"
emoji = "^1.7.0"
matplotlib = "^3.5.2"
pandas = "^1.4.2"
tqdm = "^4.64.0"
Backtesting = "^0.3.3"
backtrader = "^1.9.76"
binance = "^0.3"
bitmex = "^0.2.2"
config = "^0.5.1"
requests = "^2.28.0"
yfinance = "^0.1.70"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"